# hmb-trace-monitor

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: pages.yml
LICENSES/: Apache-2.0.txt  GPL-2.0.txt
analyzer/: CLAUDE.md  Makefile  README.md  pyproject.toml
analyzer/src/hmb_trace/: __init__.py  cli.py  format.py  report.py  stats.py  stream.py  synth.py
analyzer/tests/: test_format.py  test_report.py  test_stream_stats.py
daemon/: CLAUDE.md  Makefile
daemon/include/: hmb_ring.h
daemon/src/: dumper.c  main.c  ring.c
docs/: CLAUDE.md  Gemfile  _config.yml  abi.md  analyzer.md  architecture.md  index.md  operation.md  trace-format.md  tutorial.md
kernel/: CLAUDE.md  Kbuild  Makefile
kernel/module/: hmb_ring.h  nvme_hmb_trace.c  nvme_hmb_trace.h
kernel/patches/: 0001-nvme-reserve-hmb-region-for-trace.patch
mock/: CLAUDE.md  Makefile
mock/qemu/: nvme-hmb-overlay.patch  run.sh
mock/scripts/: build-guest-kernel.sh  load-module.sh
